big changes regarding bootstrap and styling, as well as confirmation message fix + persisting selected shifts through error

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -60,7 +60,7 @@ u{
 
 .adminBtn{
     border-radius : 5px;
-    border : 1px solid black;
+    border : 1px solid black !important;
     margin: 5px;
     font-size: 20px;
     text-align: center;
@@ -69,7 +69,7 @@ u{
 }
 .adminBtn:hover{
     background-color: rgb(0, 110, 255);
-    color: white;
+    color: white !important;
 }
 .btnStyle{
     border-radius : 5px;
